tests/custom/STARIS_2022/operation-type-errors/subsequence-type-error/stderr.expected
Error:
    subsequence-type-error.essence:2:16:
  |
2 | such that b = (4 subsequence false)
  |                ^
Type error:
	Expected: sequence of ?
	Got: int

subsequence-type-error.essence:2:30:
  |
2 | such that b = (4 subsequence false)
  |                              ^^^^^
Type error:
	Expected: sequence of ?
	Got: bool

